--- a/src/App.xaml
+++ b/src/App.xaml
@@ -1,8 +1,9 @@
-﻿<Application
-    x:Class="TingenCommander.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:TingenCommander"
-    StartupUri="MainWindow.xaml">
-    <Application.Resources />
+﻿<Application x:Class="TingenCommander.App"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="clr-namespace:TingenCommander"
+             StartupUri="MainWindow.xaml">
+    <Application.Resources>
+         
+    </Application.Resources>
 </Application>
