--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -1,12 +1,30 @@
-﻿<Window x:Class="TingenCommander.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TingenCommander"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+﻿<Window
+    x:Class="TingenCommander.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TingenCommander"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Tingen Commander"
+    Width="800"
+    Height="450"
+    mc:Ignorable="d">
     <Grid>
-
+        <TextBox
+            x:Name="txbxTingenDevelopmentMainBranchVersion"
+            Width="120"
+            Margin="149,103,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Text="TextBox"
+            TextWrapping="Wrap" />
+        <TextBox
+            x:Name="txbxTingenRepositoryDevelopmentBranch"
+            Width="120"
+            Margin="296,169,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Text="TextBox"
+            TextWrapping="Wrap" />
     </Grid>
 </Window>
