--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -6,308 +6,94 @@
     xmlns:local="clr-namespace:TingenCommander"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Tingen Commander"
-    Width="800"
-    Height="450"
+    Width="900"
+    Height="500"
     ResizeMode="NoResize"
     mc:Ignorable="d">
-    <Grid>
+    <Grid Margin="0,1,0,-1">
 
-        <TabControl x:Name="tabControl">
-            <TabItem x:Name="tabOverview" Header="Overview">
-                <Grid Background="White">
-                    <Label
-                        x:Name="lblOverviewTingenMode"
-                        Width="149"
-                        Margin="52,69,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        HorizontalContentAlignment="Center"
-                        Background="LightGray"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="Unknown" />
-                    <Button
-                        x:Name="btnOverviewLiveToggleMode"
-                        Width="50"
-                        Margin="200,73,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        Content="---" />
-                </Grid>
+        <!--  Tingen Web Service  -->
+        <!--  Tingen Web Service: Status light  -->
 
-            </TabItem>
-            <TabItem x:Name="tabEvironments" Header="Environments">
-                <Grid Background="White">
+        <!--  Tingen Web Service: Header  -->
+        <Label
+            x:Name="lblTingen"
+            Width="175"
+            Height="46"
+            Margin="49,35,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            HorizontalContentAlignment="center"
+            BorderBrush="Black"
+            BorderThickness="2"
+            Content="Tingen"
+            FontSize="22"
+            FontWeight="Bold" />
+        <Label
+            x:Name="lblTingenStatusLight"
+            Width="25"
+            Height="32"
+            Margin="37,42,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Background="LawnGreen"
+            BorderBrush="Black"
+            BorderThickness="2"
+            Content="" />
 
-                    <!--  LIVE Environment header  -->
-                    <Label
-                        x:Name="lblLiveEnvironmentHeader"
-                        Width="250"
-                        Margin="76,12,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        HorizontalContentAlignment="Center"
-                        Background="Black"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="LIVE"
-                        Foreground="White" />
-
-                    <!--  Version header  -->
-                    <Label
-                        x:Name="lblTingenVersionHeader"
-                        Width="150"
-                        Margin="325,45,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        HorizontalContentAlignment="Center"
-                        Background="LightGray"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="Version" />
-
-                    <!--  Live version  -->
-                    <Label
-                        x:Name="lblLiveTingenVersion"
-                        Width="250"
-                        Margin="76,45,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        HorizontalContentAlignment="Center"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="0.0.0" />
-
-
-                    <Label
-                        x:Name="lblUatEnvironmentHeader"
-                        Width="250"
-                        Margin="474,12,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        HorizontalContentAlignment="Center"
-                        Background="Black"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="UAT"
-                        Foreground="White" />
-
-                    <Label
-                        x:Name="lblUatTingenVersion"
-                        Width="250"
-                        Margin="474,45,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        HorizontalContentAlignment="Center"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="0.0.0" />
-                    <Button
-                        x:Name="btnUatUpdateServiceVersion"
-                        Height="24"
-                        Margin="728,46,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        Content="Button" />
-                    <Label
-                        x:Name="lblLastUpdatedHeader"
-                        Width="150"
-                        Margin="325,72,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        HorizontalContentAlignment="Center"
-                        Background="LightGray"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="Last updated" />
-                    <Label
-                        x:Name="lblLiveLastUpdated"
-                        Width="250"
-                        Margin="76,72,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        HorizontalContentAlignment="Center"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="MM/DD/YYYY" />
-                    <Label
-                        x:Name="lblUatLastUpdated"
-                        Width="250"
-                        Margin="474,72,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        HorizontalContentAlignment="Center"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="MM/DD/YYYY" />
-                    <Label
-                        x:Name="lblTingenModeHeader"
-                        Width="150"
-                        Margin="325,99,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        HorizontalContentAlignment="Center"
-                        Background="LightGray"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="Mode" />
-                    <Label
-                        x:Name="lblLiveTingenMode"
-                        Width="250"
-                        Margin="76,99,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        HorizontalContentAlignment="Center"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="Unknown" />
-                    <Label
-                        x:Name="lblUatTingenMode"
-                        Width="250"
-                        Margin="474,99,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        HorizontalContentAlignment="Center"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="Unknown" />
-                    <Button
-                        x:Name="btnLiveTingenMode"
-                        Height="28"
-                        Margin="76,269,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        Content="Disable" />
-                    <Label
-                        x:Name="lblTingenHeader"
-                        Width="130"
-                        Margin="335,12,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        HorizontalContentAlignment="Center"
-                        Background="LightGray"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="Tingen" />
-                    <Label
-                        x:Name="lblTraceLogLevelHeader"
-                        Width="150"
-                        Margin="325,126,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        HorizontalContentAlignment="Center"
-                        Background="LightGray"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="Trace log level" />
-                    <Label
-                        x:Name="lblLiveTraceLogLevel"
-                        Width="250"
-                        Margin="76,126,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        HorizontalContentAlignment="Center"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="0" />
-                    <Label
-                        x:Name="lblUatTraceLogLevel"
-                        Width="250"
-                        Margin="474,126,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        HorizontalContentAlignment="Center"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="0" />
-                    <Label
-                        x:Name="lblTingenModeHeader_Copy1"
-                        Width="150"
-                        Margin="325,153,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        HorizontalContentAlignment="Center"
-                        Background="LightGray"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="Mode" />
-                    <Label
-                        x:Name="lblLiveTingenMode_Copy1"
-                        Width="250"
-                        Margin="76,153,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        HorizontalContentAlignment="Center"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="0" />
-                    <Label
-                        x:Name="lblUatTingenMode_Copy1"
-                        Width="250"
-                        Margin="474,153,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        HorizontalContentAlignment="Center"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="0.0.0" />
-                </Grid>
-
-            </TabItem>
-            <TabItem Header="TabItem">
-                <Grid Background="#FFE5E5E5">
-                    <Label
-                        x:Name="lblRepositoryHeader"
-                        Width="195"
-                        Margin="595,300,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        HorizontalContentAlignment="Center"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="REPOSITORY" />
-                    <Label
-                        x:Name="lblMainVersionHeader"
-                        Width="100"
-                        Margin="595,328,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        HorizontalContentAlignment="Right"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="Main" />
-                    <Label
-                        x:Name="lblMainVersion"
-                        Width="96"
-                        Margin="694,328,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="0.0.0" />
-                    <Label
-                        x:Name="lblDevVersionHeader"
-                        Width="100"
-                        Margin="595,355,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        HorizontalContentAlignment="Right"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="Development" />
-                    <Label
-                        x:Name="lblDevVersion"
-                        Width="96"
-                        Margin="694,355,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        Content="0.0.0" />
-                </Grid>
-            </TabItem>
-        </TabControl>
-
-
+        <Label
+            x:Name="lblTingenVersion"
+            Width="150"
+            Height="26"
+            Margin="222,53,0,0"
+            Padding="0,7,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            HorizontalContentAlignment="Center"
+            BorderBrush="Black"
+            BorderThickness="1"
+            Content="v00.00.00.00 [b000000.0000]"
+            FontSize="10" />
+        <Label
+            x:Name="lblTingenVersionHeader"
+            Width="100"
+            Height="22"
+            Padding="0,3,0,0"
+            Margin="247,37,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            HorizontalContentAlignment="Center"
+            Background="WhiteSmoke"
+            BorderBrush="Black"
+            BorderThickness="1"
+            Content="VERSION"
+            FontSize="10" />
+        <Label
+            x:Name="lblTingenLastUpdated"
+            Width="150"
+            Height="26"
+            Margin="371,53,0,0"
+            Padding="0,7,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            HorizontalContentAlignment="Center"
+            BorderBrush="Black"
+            BorderThickness="1"
+            Content="00/00/0000 00:00:00 AM"
+            FontSize="10" />
+        <Label
+            x:Name="lblTingenLastUpdatedHeader"
+            Width="100"
+            Height="22"
+            Padding="0,3,0,0"
+            Margin="396,37,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            HorizontalContentAlignment="Center"
+            Background="WhiteSmoke"
+            BorderBrush="Black"
+            BorderThickness="1"
+            Content="LAST UPDATED"
+            FontSize="10" />
     </Grid>
 </Window>
