--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -1,4 +1,9 @@
-﻿<Window
+﻿<!--
+// u250121_code
+// u250109_documentation
+-->
+
+    <Window
     x:Class="TingenCommander.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -10,56 +15,95 @@
     Height="500"
     ResizeMode="NoResize"
     mc:Ignorable="d">
-    <Grid Margin="0,1,0,-1">
+    <Grid>
 
-        <!--  Tingen Web Service  -->
-        <!--  Tingen Web Service: Status light  -->
-
-        <!--  Tingen Web Service: Header  -->
+        <!--  Headers  -->
         <Label
-            x:Name="lblTingen"
-            Width="175"
+            x:Name="lblTingenHeader"
+            Width="543"
             Height="46"
-            Margin="49,35,0,0"
+            Margin="330,25,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             HorizontalContentAlignment="center"
             BorderBrush="Black"
-            BorderThickness="2"
+            BorderThickness="3"
             Content="Tingen"
             FontSize="22"
             FontWeight="Bold" />
         <Label
-            x:Name="lblTingenStatusLight"
-            Width="25"
-            Height="32"
-            Margin="37,42,0,0"
+            x:Name="lblLiveHeader"
+            Width="175"
+            Height="28"
+            Margin="340,62,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
-            Background="LawnGreen"
+            HorizontalContentAlignment="Center"
+            Background="White"
             BorderBrush="Black"
             BorderThickness="2"
-            Content="" />
-
+            Content="LIVE"
+            FontSize="12" />
         <Label
-            x:Name="lblTingenVersion"
-            Width="150"
-            Height="26"
-            Margin="222,53,0,0"
-            Padding="0,7,0,0"
+            x:Name="lblUatHeader"
+            Width="175"
+            Height="28"
+            Margin="688,62,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            HorizontalContentAlignment="Center"
+            Background="White"
+            BorderBrush="Black"
+            BorderThickness="2"
+            Content="UAT"
+            FontSize="12" />
+
+        <!--  Status  -->
+        <Label
+            x:Name="lblStatusHeader"
+            Width="175"
+            Height="28"
+            Margin="514,90,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            HorizontalContentAlignment="Center"
+            Background="WhiteSmoke"
+            BorderBrush="Black"
+            BorderThickness="1"
+            Content="STATUS"
+            FontSize="12"
+            FontWeight="Bold" />
+        <Label
+            x:Name="lblModeLive"
+            Width="175"
+            Height="28"
+            Margin="340,90,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             HorizontalContentAlignment="Center"
             BorderBrush="Black"
             BorderThickness="1"
-            Content="v00.00.00.00 [b000000.0000]"
-            FontSize="10" />
+            Content="Unknown"
+            FontSize="12" />
         <Label
-            x:Name="lblTingenVersionHeader"
-            Width="100"
-            Height="22"
-            Padding="0,3,0,0"
-            Margin="247,37,0,0"
+            x:Name="lblModeUat"
+            Width="175"
+            Height="28"
+            Margin="688,90,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            HorizontalContentAlignment="Center"
+            BorderBrush="Black"
+            BorderThickness="1"
+            Content="Unknown"
+            FontSize="12" />
+
+        <!--  Version  -->
+        <Label
+            x:Name="lblVersionHeader"
+            Width="175"
+            Height="28"
+            Margin="514,117,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             HorizontalContentAlignment="Center"
@@ -67,26 +111,39 @@
             BorderBrush="Black"
             BorderThickness="1"
             Content="VERSION"
-            FontSize="10" />
+            FontSize="12"
+            FontWeight="Bold" />
         <Label
-            x:Name="lblTingenLastUpdated"
-            Width="150"
-            Height="26"
-            Margin="371,53,0,0"
-            Padding="0,7,0,0"
+            x:Name="lblVersionLive"
+            Width="175"
+            Height="28"
+            Margin="340,117,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             HorizontalContentAlignment="Center"
             BorderBrush="Black"
             BorderThickness="1"
-            Content="00/00/0000 00:00:00 AM"
-            FontSize="10" />
+            Content="00.00.00.00 [b000000.0000]"
+            FontSize="12" />
         <Label
-            x:Name="lblTingenLastUpdatedHeader"
-            Width="100"
-            Height="22"
-            Padding="0,3,0,0"
-            Margin="396,37,0,0"
+            x:Name="lblVersionUat"
+            Width="175"
+            Height="28"
+            Margin="688,117,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            HorizontalContentAlignment="Center"
+            BorderBrush="Black"
+            BorderThickness="1"
+            Content="00.00.00.00 [b000000.0000]"
+            FontSize="12" />
+
+        <!--  Last updated  -->
+        <Label
+            x:Name="lblLastUpdatedHeader"
+            Width="175"
+            Height="28"
+            Margin="514,144,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             HorizontalContentAlignment="Center"
@@ -94,6 +151,66 @@
             BorderBrush="Black"
             BorderThickness="1"
             Content="LAST UPDATED"
-            FontSize="10" />
+            FontSize="12"
+            FontWeight="Bold" />
+        <Label
+            x:Name="lblLastUpdatedLive"
+            Width="175"
+            Height="28"
+            Margin="340,144,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            HorizontalContentAlignment="Center"
+            BorderBrush="Black"
+            BorderThickness="1"
+            Content="00/00/0000 00:00:00 AM"
+            FontSize="12" />
+        <Label
+            x:Name="lblLastUpdatedUat"
+            Width="175"
+            Height="28"
+            Margin="688,144,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            HorizontalContentAlignment="Center"
+            BorderBrush="Black"
+            BorderThickness="1"
+            Content="00/00/0000 00:00:00 AM"
+            FontSize="12" />
+
+        <!--  Commander mode  -->
+        <Label
+            x:Name="lblCommanderModeHeader"
+            Width="85"
+            Margin="10,260,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            BorderBrush="Black"
+            BorderThickness="1"
+            Content="Logged in as" />
+        <Label
+            x:Name="lblCommanderMode"
+            Width="100"
+            Margin="94,260,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            HorizontalContentAlignment="Center"
+            Background="BlanchedAlmond"
+            BorderBrush="Black"
+            BorderThickness="1"
+            Content="Standard user" />
+        <Image
+            x:Name="image"
+            Width="184"
+            Height="245"
+            Margin="10,10,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top" Source="/AppData/Image/TingenCommander116x154.png">
+            <Image.OpacityMask>
+                <ImageBrush ImageSource="/AppData/Image/TingenCommander116x154.png" />
+            </Image.OpacityMask>
+        </Image>
+
+
     </Grid>
 </Window>
