--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -3,7 +3,7 @@
 // u250109_documentation
 -->
 
-    <Window
+<Window
     x:Class="TingenCommander.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -17,53 +17,27 @@
     mc:Ignorable="d">
     <Grid>
 
-        <!--  Headers  -->
+        <!-- Tingen web service -->
         <Label
-            x:Name="lblTingenHeader"
-            Width="543"
+            x:Name="lblTingenWebServiceHeader"
+            Width="349"
             Height="46"
-            Margin="330,25,0,0"
+            Margin="199,10,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             HorizontalContentAlignment="center"
             BorderBrush="Black"
-            BorderThickness="3"
-            Content="Tingen"
+            BorderThickness="2"
+            Content="Tingen web service"
             FontSize="22"
             FontWeight="Bold" />
-        <Label
-            x:Name="lblLiveHeader"
-            Width="175"
-            Height="28"
-            Margin="340,62,0,0"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            HorizontalContentAlignment="Center"
-            Background="White"
-            BorderBrush="Black"
-            BorderThickness="2"
-            Content="LIVE"
-            FontSize="12" />
-        <Label
-            x:Name="lblUatHeader"
-            Width="175"
-            Height="28"
-            Margin="688,62,0,0"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            HorizontalContentAlignment="Center"
-            Background="White"
-            BorderBrush="Black"
-            BorderThickness="2"
-            Content="UAT"
-            FontSize="12" />
 
         <!--  Status  -->
         <Label
             x:Name="lblStatusHeader"
             Width="175"
             Height="28"
-            Margin="514,90,0,0"
+            Margin="199,56,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             HorizontalContentAlignment="Center"
@@ -74,22 +48,10 @@
             FontSize="12"
             FontWeight="Bold" />
         <Label
-            x:Name="lblModeLive"
+            x:Name="lblStatus"
             Width="175"
             Height="28"
-            Margin="340,90,0,0"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            HorizontalContentAlignment="Center"
-            BorderBrush="Black"
-            BorderThickness="1"
-            Content="Unknown"
-            FontSize="12" />
-        <Label
-            x:Name="lblModeUat"
-            Width="175"
-            Height="28"
-            Margin="688,90,0,0"
+            Margin="373,56,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             HorizontalContentAlignment="Center"
@@ -103,7 +65,7 @@
             x:Name="lblVersionHeader"
             Width="175"
             Height="28"
-            Margin="514,117,0,0"
+            Margin="199,82,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             HorizontalContentAlignment="Center"
@@ -114,22 +76,10 @@
             FontSize="12"
             FontWeight="Bold" />
         <Label
-            x:Name="lblVersionLive"
+            x:Name="lblVersione"
             Width="175"
             Height="28"
-            Margin="340,117,0,0"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            HorizontalContentAlignment="Center"
-            BorderBrush="Black"
-            BorderThickness="1"
-            Content="00.00.00.00 [b000000.0000]"
-            FontSize="12" />
-        <Label
-            x:Name="lblVersionUat"
-            Width="175"
-            Height="28"
-            Margin="688,117,0,0"
+            Margin="373,82,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             HorizontalContentAlignment="Center"
@@ -138,12 +88,13 @@
             Content="00.00.00.00 [b000000.0000]"
             FontSize="12" />
 
+
         <!--  Last updated  -->
         <Label
             x:Name="lblLastUpdatedHeader"
             Width="175"
             Height="28"
-            Margin="514,144,0,0"
+            Margin="199,108,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             HorizontalContentAlignment="Center"
@@ -154,22 +105,10 @@
             FontSize="12"
             FontWeight="Bold" />
         <Label
-            x:Name="lblLastUpdatedLive"
+            x:Name="lblLastUpdated"
             Width="175"
             Height="28"
-            Margin="340,144,0,0"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            HorizontalContentAlignment="Center"
-            BorderBrush="Black"
-            BorderThickness="1"
-            Content="00/00/0000 00:00:00 AM"
-            FontSize="12" />
-        <Label
-            x:Name="lblLastUpdatedUat"
-            Width="175"
-            Height="28"
-            Margin="688,144,0,0"
+            Margin="373,108,0,0"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             HorizontalContentAlignment="Center"
@@ -199,6 +138,30 @@
             BorderBrush="Black"
             BorderThickness="1"
             Content="Standard user" />
+
+        <!--  Tingen environment selector-->
+        <Label
+            x:Name="lblEnvironmentHeader"
+            Width="85"
+            Margin="10,292,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            BorderBrush="Black"
+            BorderThickness="1"
+            Content="Environment" />
+        <Label
+            x:Name="lblEnvironment"
+            Width="100"
+            Margin="94,292,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            HorizontalContentAlignment="Center"
+            Background="LightBlue"
+            BorderBrush="Black"
+            BorderThickness="1"
+            Content="LIVE" Height="28" />
+
+        <!-- Tingen Commander logo -->
         <Image
             x:Name="image"
             Width="184"
