--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -1,12 +1,26 @@
-﻿<Window x:Class="TingenCommander.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TingenCommander"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+﻿<Window
+    x:Class="TingenCommander.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TingenCommander"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="MainWindow"
+    Width="800"
+    Height="450"
+    mc:Ignorable="d">
     <Grid>
-
+        <!-- Tingen Commander logo -->
+        <Image
+            x:Name="image"
+            Width="184"
+            Height="245"
+            Margin="10,10,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top" Source="/AppData/Image/TingenCommander116x154.png">
+            <Image.OpacityMask>
+                <ImageBrush ImageSource="/AppData/Image/TingenCommander116x154.png" />
+            </Image.OpacityMask>
+        </Image>
     </Grid>
 </Window>
