--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -5,7 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:TingenCommander"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="MainWindow"
+    Title="Tingen Commander v0.1.0"
     Width="800"
     Height="450"
     mc:Ignorable="d">
