--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -1,4 +1,28 @@
-﻿<Window
+﻿<!--
+    ████████╗██╗███╗   ██╗ ██████╗ ███████╗███╗   ██╗
+    ╚══██╔══╝██║████╗  ██║██╔════╝ ██╔════╝████╗  ██║
+       ██║   ██║██╔██╗ ██║██║  ███╗█████╗  ██╔██╗ ██║
+       ██║   ██║██║╚██╗██║██║   ██║██╔══╝  ██║╚██╗██║
+       ██║   ██║██║ ╚████║╚██████╔╝███████╗██║ ╚████║
+       ╚═╝   ╚═╝╚═╝  ╚═══╝ ╚═════╝ ╚══════╝╚═╝  ╚═══╝
+     ██████╗ ██████╗ ███╗   ███╗███╗   ███╗ █████╗ ███╗   ██╗██████╗ ███████╗██████╗
+    ██╔════╝██╔═══██╗████╗ ████║████╗ ████║██╔══██╗████╗  ██║██╔══██╗██╔════╝██╔══██╗
+    ██║     ██║   ██║██╔████╔██║██╔████╔██║███████║██╔██╗ ██║██║  ██║█████╗  ██████╔╝
+    ██║     ██║   ██║██║╚██╔╝██║██║╚██╔╝██║██╔══██║██║╚██╗██║██║  ██║██╔══╝  ██╔══██╗
+    ╚██████╗╚██████╔╝██║ ╚═╝ ██║██║ ╚═╝ ██║██║  ██║██║ ╚████║██████╔╝███████╗██║  ██║
+     ╚═════╝ ╚═════╝ ╚═╝     ╚═╝╚═╝     ╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝╚═════╝ ╚══════╝╚═╝  ╚═╝
+                                                           Tingen Web Service Utility
+                                                            Development Release 0.1.0
+
+    https://github.com/APrettyCoolProgram/Tingen-Commander
+    Copyright (c) A Pretty Cool Program. All rights reserved.
+    Licensed under the Apache 2.0 license.
+
+    u250313_code
+    u250313_documentation
+-->
+
+<Window
     x:Class="TingenCommander.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -10,14 +34,15 @@
     Height="450"
     mc:Ignorable="d">
     <Grid>
-        <!-- Tingen Commander logo -->
+        <!--  Tingen Commander logo  -->
         <Image
             x:Name="image"
             Width="184"
             Height="245"
             Margin="10,10,0,0"
             HorizontalAlignment="Left"
-            VerticalAlignment="Top" Source="/AppData/Image/TingenCommander116x154.png">
+            VerticalAlignment="Top"
+            Source="/AppData/Image/TingenCommander116x154.png">
             <Image.OpacityMask>
                 <ImageBrush ImageSource="/AppData/Image/TingenCommander116x154.png" />
             </Image.OpacityMask>
